# CVs

./: .gitignore  CMakeLists.txt  README.md
src/cvBasic/: README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  ui_mainwindow.h  ui_videoTrack.h  videoTrack.ui
src/imageEdit/: edit.cpp  edit.hpp  main.cpp  window.cpp  window.hpp
src/public/include/: input.hpp
src/screenLog/: main.cpp
src/screenLog/include/: capture.hpp
